versions/v2.8/modules/en/pages/faq/deprecated-features.adoc
= Deprecated Features in {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2025-04-24
:page-revdate: {revdate}

== What is Rancher's deprecation policy?

We have published our official deprecation policy in the support https://rancher.com/support-maintenance-terms[terms of service].

== Where can I find out which features have been deprecated in Rancher?

Rancher will publish deprecated features as part of the https://github.com/rancher/rancher/releases[release notes] for Rancher found on GitHub. Please consult the following patch releases for deprecated features:

|===
| Patch Version | Release Date

| https://github.com/rancher/rancher/releases/tag/v2.8.15[2.8.15]
| Apr 24, 2025

| https://github.com/rancher/rancher/releases/tag/v2.8.14[2.8.14]
| Mar 31, 2025

| https://github.com/rancher/rancher/releases/tag/v2.8.13[2.8.13]
| Feb 27, 2025

| https://github.com/rancher/rancher/releases/tag/v2.8.12[2.8.12]
| Jan 29, 2025

| https://github.com/rancher/rancher/releases/tag/v2.8.11[2.8.11]
| Dec 18, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.10[2.8.10]
| Nov 18, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.9[2.8.9]
| Oct 24, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.8[2.8.8]
| Sep 19, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.7[2.8.7]
| Aug 26, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.6[2.8.6]
| Jul 31, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.5[2.8.5]
| Jun 17, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.4[2.8.4]
| May 16, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.3[2.8.3]
| Mar 28, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.2[2.8.2]
| Feb 8, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.1[2.8.1]
| Jan 22, 2024

| https://github.com/rancher/rancher/releases/tag/v2.8.0[2.8.0]
| Dec 6, 2023
|===

== What can I expect when a feature is marked for deprecation?

In the release where functionality is marked as "Deprecated", it will still be available and supported allowing upgrades to follow the usual procedure. Once upgraded, users/admins should start planning to move away from the deprecated functionality before upgrading to the release it marked as removed. The recommendation for new deployments is to not use the deprecated feature.
